完成 Homework Phase 2 分析評論

--- a/DM2025-Lab1-Homework.ipynb
+++ b/DM2025-Lab1-Homework.ipynb
@@ -773,7 +773,7 @@
     "\n",
     "1.  **缺乏詞形還原/詞幹提取 (Lemmatization/Stemming):** 詞彙的不同形式 (如 \"invest\", \"investing\", \"investment\") 被視為獨立特徵，導致特徵維度冗餘。\n",
     "    * **改進：** 應加入 **WordNetLemmatizer** 將詞彙還原至其基礎形式，以減少特徵空間並提高模型的泛化能力。\n",
-    "2.  **不完整的領域停用詞與符號處理:** 僅移除了通用英文停用詞。Reddit 股市數據中大量存在的**股票代碼** (e.g., `$GME`)、**表情符號** (e.g., 🚀) 和**領域俚語** (\"DD\", \"YOLO\") 缺乏有效處理。\n",
+    "2.  **不完整的領域停用詞與符號處理:** 僅移除了通用英文停用詞。Reddit 股市數據中大量存在的**股票代碼** (e.g., `$GME`)、**表情符號**  和**領域俚語** (\"DD\", \"YOLO\") 缺乏有效處理。\n",
     "    * **改進：** 擴充停用詞表，並使用正規表達式 (Regex) 專門移除或標準化這些符號和代碼。\n",
     "\n",
     "---"
